--- a/application.yml
+++ b/application.yml
@@ -10,3 +10,12 @@ logging:
   level:
     io:
       pivotal: DEBUG
+      
+      
+      
+
+      
+      spring: # <---NEW SECTION
+  cloud:
+    services:
+      registrationMethod: direct
